--- a/wp-content/themes/understrap-child/sass/theme/modules/featured_products.scss
+++ b/wp-content/themes/understrap-child/sass/theme/modules/featured_products.scss
@@ -7,4 +7,7 @@
 		max-width: 300px;
 		text-align: center;
 	}
+	@at-root #{&}__text {
+		overflow: hidden;
+	}
 }
